@@ -644,63 +644,3 @@ end
             }
           },
       },
-  {
-    type = "recipe",
-    name = "pm-speed-module-5",
-    enabled = false,
-    energy_required = 30,
-    subgroup = "pm-speed",
-    order = "e",
-    ingredients =
-    {
-      PM.ingredient("pm-cobalt-blue", 5),
-      PM.ingredient("speed-module-2", 1),
-      PM.ingredient("pm-speed-module-light", 1),
-      PM.ingredient("advanced-circuit", 9),
-      PM.ingredient("processing-unit", 9)
-    },
-    results =
-    {
-      PM.product("pm-speed-module-5", 1)
-    }
-  },
-  {
-    type = "recipe",
-    name = "pm-efficiency-module-5",
-    enabled = false,
-    energy_required = 30,
-    subgroup = "pm-efficiency",
-    order = "e",
-    ingredients =
-    {
-      PM.ingredient("pm-chrome-green", 5),
-      PM.ingredient("efficiency-module-2", 1),
-      PM.ingredient("pm-efficiency-module-light", 1),
-      PM.ingredient("advanced-circuit", 9),
-      PM.ingredient("processing-unit", 9)
-    },
-    results =
-    {
-      PM.product("pm-efficiency-module-5", 1)
-    }
-  },
-  {
-    type = "recipe",
-    name = "pm-productivity-module-5",
-    enabled = false,
-    energy_required = 30,
-    subgroup = "pm-productivity",
-    order = "e",
-    ingredients =
-    {
-      PM.ingredient("pm-cadnium-red", 5),
-      PM.ingredient("productivity-module-2", 1),
-      PM.ingredient("pm-productivity-module-light", 1),
-      PM.ingredient("advanced-circuit", 9),
-      PM.ingredient("processing-unit", 9)
-    },
-    results =
-    {
-      PM.product("pm-productivity-module-5", 1)
-    }
-  },
