@@ -27,6 +27,7 @@ Date: 2025-28-09
     - Moved rocket control units into their correct subgroup.
     - Seperated circuit recipes into circuits (green, orange, red) and processing units (blue, purple, grey).
     - Changed "There is no spoon" and "No time for chitchat" to be actually doable in PM, and let them be doable by changing world settings
+    - Changed tier 4 module recipes to take red and blue circuits instead of orange and blue.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.000
